[package]
authors = ["Andreas Holmström <holmstrom.andreas95@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "app"
version = "0.1.0"

[workspace]
# members = ["command-parser", "nrf52840-prx", "nrf52833-ptx"]
# members = ["nrf52840-prx", "nrf52833-ptx"]

[dependencies]
itoa = "1.0.10"
cortex-m = { version = "0.7.4", features = [
    "inline-asm",
    "critical-section-single-core",
] }

panic-rtt-target = { version = "0.1.3" }
panic-halt = { version = "0.2.0" }

rtt-target = { version = "0.5.0" }

systick-monotonic = "1.0.0"
dwt-systick-monotonic = "1.0.0"

cortex-m-rt = "0.7.3"
cortex-m-rtic = "1.1.4"
stm32f7 = { version = "0.15.1", features = ["stm32f7x6", "rt"] }
embedded-hal = "0.2.7"

[profile.dev]
incremental = false # better debug 
codegen-units = 1   # better debug
opt-level = 0       # no optimization
lto = false         # no optimization
# overflow-checks = false # uncomment to disable overflow checks for dev/debug builds  

[profile.release]
incremental = false    # better debug and also better optimizations
codegen-units = 1      # better debug and also better optimizations
debug = true           # symbols are nice and they don't increase the size on Flash
lto = true             # better optimizations
overflow-checks = true # set true to enable overflow checks for release builds
